skills/cloud/gke-workload-security/assets/default-deny-netpol.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  # checkov:skip=CKV_K8S_39:Default deny all intentionally matches all pods
  name: default-deny-all

spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
